--- a/backup/Elman_MD_troubleshooting.ipynb
+++ b/backup/Elman_MD_troubleshooting.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,8 +120,8 @@
     "\n",
     "        # RNN -> RNN\n",
     "        self.h2h = nn.Linear(hidden_size, hidden_size)\n",
-    "        k = (1./self.hidden_size)**0.5\n",
-    "        nn.init.uniform_(self.h2h.weight, a=-k, b=k) # same as pytorch built-in RNN module\n",
+    "        # k = (1./self.hidden_size)**0.5\n",
+    "        # nn.init.uniform_(self.h2h.weight, a=-k, b=k) # same as pytorch built-in RNN module\n",
     "\n",
     "        \n",
     "    def init_hidden(self, input):\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -217,138 +217,86 @@
       "rnn.h2h.bias\n",
       "fc.weight\n",
       "fc.bias\n",
-      "tensor([0.4834, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.5341, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.5341, 0.4773, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.5341, 0.4773, 0.4647, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.5341, 0.4773, 0.4647, 0.4759, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.5341, 0.4773, 0.4647, 0.4759, 0.4805, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.5341, 0.4773, 0.4647, 0.4759, 0.4805, 0.4836, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.5341, 0.4773, 0.4647, 0.4759, 0.4805, 0.4836, 0.4823,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.5341, 0.4773, 0.4647, 0.4759, 0.4805, 0.4836, 0.4823,\n",
-      "        0.4825], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4834, 0.5936, 0.5341, 0.4773, 0.4647, 0.4759, 0.4805, 0.4836, 0.4823,\n",
-      "        0.4825], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.4498, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.4498, 0.4080, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.4498, 0.4080, 0.3960, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.4498, 0.4080, 0.3960, 0.4206, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.4498, 0.4080, 0.3960, 0.4206, 0.4320, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.4498, 0.4080, 0.3960, 0.4206, 0.4320, 0.4331, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.4498, 0.4080, 0.3960, 0.4206, 0.4320, 0.4331, 0.4327,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.4498, 0.4080, 0.3960, 0.4206, 0.4320, 0.4331, 0.4327,\n",
-      "        0.4338], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4826, 0.5301, 0.4498, 0.4080, 0.3960, 0.4206, 0.4320, 0.4331, 0.4327,\n",
-      "        0.4338], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.3538, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.3538, 0.3349, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.3538, 0.3349, 0.3597, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.3538, 0.3349, 0.3597, 0.4150, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.3538, 0.3349, 0.3597, 0.4150, 0.4346, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.3538, 0.3349, 0.3597, 0.4150, 0.4346, 0.4371, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.3538, 0.3349, 0.3597, 0.4150, 0.4346, 0.4371, 0.4360,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.3538, 0.3349, 0.3597, 0.4150, 0.4346, 0.4371, 0.4360,\n",
-      "        0.4380], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4820, 0.4841, 0.3538, 0.3349, 0.3597, 0.4150, 0.4346, 0.4371, 0.4360,\n",
-      "        0.4380], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699, -0.7970,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699, -0.7970, -0.8547,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699, -0.7970, -0.8547, -0.8616,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699, -0.7970, -0.8547, -0.8616, -0.8762,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699, -0.7970, -0.8547, -0.8616, -0.8762, -0.8851,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699, -0.7970, -0.8547, -0.8616, -0.8762, -0.8851, -0.8885,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699, -0.7970, -0.8547, -0.8616, -0.8762, -0.8851, -0.8885,\n",
-      "        -0.8891,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699, -0.7970, -0.8547, -0.8616, -0.8762, -0.8851, -0.8885,\n",
-      "        -0.8891, -0.8892], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1809, -0.5699, -0.7970, -0.8547, -0.8616, -0.8762, -0.8851, -0.8885,\n",
-      "        -0.8891, -0.8892], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.7163, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.7163, 0.8978, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.7163, 0.8978, 0.9550, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.7163, 0.8978, 0.9550, 0.9659, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.7163, 0.8978, 0.9550, 0.9659, 0.9671, 0.0000, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.7163, 0.8978, 0.9550, 0.9659, 0.9671, 0.9682, 0.0000,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.7163, 0.8978, 0.9550, 0.9659, 0.9671, 0.9682, 0.9689,\n",
-      "        0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.7163, 0.8978, 0.9550, 0.9659, 0.9671, 0.9682, 0.9689,\n",
-      "        0.9690], grad_fn=<SelectBackward>)\n",
-      "tensor([0.4838, 0.6020, 0.7163, 0.8978, 0.9550, 0.9659, 0.9671, 0.9682, 0.9689,\n",
-      "        0.9690], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509, -0.9038,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509, -0.9038, -0.9590,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509, -0.9038, -0.9590, -0.9782,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509, -0.9038, -0.9590, -0.9782, -0.9866,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509, -0.9038, -0.9590, -0.9782, -0.9866, -0.9880,  0.0000,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509, -0.9038, -0.9590, -0.9782, -0.9866, -0.9880, -0.9881,\n",
-      "         0.0000,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509, -0.9038, -0.9590, -0.9782, -0.9866, -0.9880, -0.9881,\n",
-      "        -0.9882,  0.0000], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509, -0.9038, -0.9590, -0.9782, -0.9866, -0.9880, -0.9881,\n",
-      "        -0.9882, -0.9883], grad_fn=<SelectBackward>)\n",
-      "tensor([-0.1821, -0.6509, -0.9038, -0.9590, -0.9782, -0.9866, -0.9880, -0.9881,\n",
-      "        -0.9882, -0.9883], grad_fn=<SelectBackward>)\n"
+      "Total step: 500\n",
+      "Training sample index: 0-10\n",
+      "Total loss: 0.57145; MSE loss: 0.57145\n",
+      "Predicted left training time: 971 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 10-20\n",
+      "Total loss: 0.93535; MSE loss: 0.93535\n",
+      "Predicted left training time: 952 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 20-30\n",
+      "Total loss: 0.80346; MSE loss: 0.80346\n",
+      "Predicted left training time: 924 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 30-40\n",
+      "Total loss: 0.65307; MSE loss: 0.65307\n",
+      "Predicted left training time: 902 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 40-50\n",
+      "Total loss: 0.53032; MSE loss: 0.53032\n",
+      "Predicted left training time: 856 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 50-60\n",
+      "Total loss: 0.25993; MSE loss: 0.25993\n",
+      "Predicted left training time: 1102 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 60-70\n",
+      "Total loss: 0.17570; MSE loss: 0.17570\n",
+      "Predicted left training time: 842 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 70-80\n",
+      "Total loss: 0.14049; MSE loss: 0.14049\n",
+      "Predicted left training time: 729 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 80-90\n",
+      "Total loss: 0.13088; MSE loss: 0.13088\n",
+      "Predicted left training time: 797 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 90-100\n",
+      "Total loss: 0.12662; MSE loss: 0.12662\n",
+      "Predicted left training time: 713 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 100-110\n",
+      "Total loss: 0.12439; MSE loss: 0.12439\n",
+      "Predicted left training time: 681 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 110-120\n",
+      "Total loss: 0.12682; MSE loss: 0.12682\n",
+      "Predicted left training time: 656 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 120-130\n",
+      "Total loss: 0.12446; MSE loss: 0.12446\n",
+      "Predicted left training time: 641 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 130-140\n",
+      "Total loss: 0.13076; MSE loss: 0.13076\n",
+      "Predicted left training time: 625 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 140-150\n",
+      "Total loss: 0.13117; MSE loss: 0.13117\n",
+      "Predicted left training time: 682 s\n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 150-160\n",
+      "Total loss: 0.12205; MSE loss: 0.12205\n",
+      "Predicted left training time: 695 s\n",
+      "\n"
      ]
     },
     {
@@ -358,7 +306,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-749d94d62123>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     48\u001b[0m     \u001b[1;31m###print(model.parm['rnn.input2h.weight'])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[1;31m###print(model.parm['rnn.h2h.weight'])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m     \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m     \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclip_grad_norm_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# clip gradients\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-8-749d94d62123>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     48\u001b[0m     \u001b[1;31m###print(model.parm['rnn.input2h.weight'])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[1;31m###print(model.parm['rnn.h2h.weight'])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m     \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m     \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclip_grad_norm_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# clip gradients\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mD:\\Anaconda\\Anaconda_setting\\envs\\deeplearning\\lib\\site-packages\\torch\\tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    243\u001b[0m                 \u001b[0mcreate_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    244\u001b[0m                 inputs=inputs)\n\u001b[1;32m--> 245\u001b[1;33m         \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    246\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    247\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mD:\\Anaconda\\Anaconda_setting\\envs\\deeplearning\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    145\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[0;32m    146\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 147\u001b[1;33m         allow_unreachable=True, accumulate_grad=True)  # allow_unreachable flag\n\u001b[0m\u001b[0;32m    148\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    149\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
