--- a/backup/Elman.ipynb
+++ b/backup/Elman.ipynb
@@ -177,52 +177,72 @@
       "Total step: 500\n",
       "Training sample index: 0-10\n",
       "loss: 2.65338\n",
-      "Predicted left training time: 585 s \n",
+      "Predicted left training time: 1345 s \n",
       "\n",
       "Total step: 500\n",
       "Training sample index: 10-20\n",
       "loss: 0.14313\n",
-      "Predicted left training time: 618 s \n",
+      "Predicted left training time: 1241 s \n",
       "\n",
       "Total step: 500\n",
       "Training sample index: 20-30\n",
       "loss: 0.10503\n",
-      "Predicted left training time: 639 s \n",
+      "Predicted left training time: 1164 s \n",
       "\n",
       "Total step: 500\n",
       "Training sample index: 30-40\n",
       "loss: 0.02483\n",
-      "Predicted left training time: 654 s \n",
+      "Predicted left training time: 1127 s \n",
       "\n",
       "Total step: 500\n",
       "Training sample index: 40-50\n",
       "loss: 0.01181\n",
-      "Predicted left training time: 618 s \n",
+      "Predicted left training time: 1067 s \n",
       "\n",
       "Total step: 500\n",
       "Training sample index: 50-60\n",
       "loss: 0.00686\n",
-      "Predicted left training time: 675 s \n",
+      "Predicted left training time: 1086 s \n",
       "\n",
       "Total step: 500\n",
       "Training sample index: 60-70\n",
       "loss: 0.00529\n",
-      "Predicted left training time: 616 s \n",
+      "Predicted left training time: 1003 s \n",
       "\n",
       "Total step: 500\n",
       "Training sample index: 70-80\n",
       "loss: 0.00450\n",
-      "Predicted left training time: 564 s \n",
+      "Predicted left training time: 927 s \n",
       "\n",
       "Total step: 500\n",
       "Training sample index: 80-90\n",
       "loss: 0.00372\n",
-      "Predicted left training time: 559 s \n",
+      "Predicted left training time: 925 s \n",
       "\n",
       "Total step: 500\n",
       "Training sample index: 90-100\n",
       "loss: 0.00318\n",
+      "Predicted left training time: 663 s \n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 100-110\n",
+      "loss: 0.00292\n",
+      "Predicted left training time: 622 s \n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 110-120\n",
+      "loss: 0.00261\n",
       "Predicted left training time: 598 s \n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 120-130\n",
+      "loss: 0.00237\n",
+      "Predicted left training time: 576 s \n",
+      "\n",
+      "Total step: 500\n",
+      "Training sample index: 130-140\n",
+      "loss: 0.00219\n",
+      "Predicted left training time: 561 s \n",
       "\n"
      ]
     },
